canadensis_dsdl_compiler/tests/compile_fail/keyword_in_package/canadensis/_thing_/Thing.1.0.uavcan

# This type is in the package canadensis._thing_, which contains the reserved keyword _thing_.

@sealed
